--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="radio-container">
                 <label class="form-label">Gênero</label>
-                <div class="gender_inputs">
+                <div id="gender_inputs">
                     <div class="radio-box">
                         <input type="radio" name="gender" id="male" class="form-control" value="male">
                         <label for="male" class="form-label">Masculino</label>
