--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Criar conta</title>
 
     <link rel="stylesheet" href="src/styles/styles.css">
+    <link rel="stylesheet" href="src/styles/500px-responsive.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 <body>
@@ -86,5 +87,7 @@
             </button>
         </form>
     </main>
+
+    <script src="src/javascript/script.js"></script>
 </body>
 </html>
