--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
 
         <form action="" id="form">
             <div id="input_container">
-                <div class="input-box">
+                <div class="input-box valid">
                     <label for="name" class="form-label">Nome</label>
                     <div class="input-field">
                         <input type="text" name="name" id="name" class="form-control" placeholder="Nome">
                         <i class="bi bi-person-square"></i>
                     </div>
+                    <span class="error"></span>
                 </div>
                 <div class="input-box">
                     <label for="last_name" class="form-label">Sobrenome</label>
